Add HTTP API server with HLS streaming
- Add axum-based HTTP server serving web UI and API endpoints
- Implement HLS playlist and segment generation from hot buffer
- Rewrite MPEG-TS segmenter to store raw packets with PAT/PMT
- Add segment access methods to HotBuffer for HLS serving
- Add HTTP config section for server port

--- a/config.toml.example
+++ b/config.toml.example
@@ -4,6 +4,10 @@
 # Hot buffer duration in seconds (default: 600 = 10 minutes)
 hot_duration_secs = 600
 
+[http]
+# HTTP server port for web UI (default: 8080)
+port = 8080
+
 # Camera configuration
 # Each camera needs an id and url
 
