--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ toml = "0.9"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 thiserror = "2"
+axum = "0.8"
+tower-http = { version = "0.6", features = ["fs"] }
+rust-embed = "8"
+mime_guess = "2"
+serde_json = "1"
