--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tower-http = { version = "0.6", features = ["fs"] }
 rust-embed = "8"
 mime_guess = "2"
 serde_json = "1"
+opencv = { version = "0.98.1", features = ["clang-runtime"] }
