Add adaptive motion threshold using percentile-based tuning
Replace static motion_threshold config with automatic tuning:
- ScoreHistogram tracks score distribution with constant memory
- 100-frame warmup lets background model stabilize before detection
- After 1000 samples, uses 90th percentile as threshold
- Only top 10% of motion events are recorded
- Adapts automatically to each camera over hours of operation

--- a/config.toml.example
+++ b/config.toml.example
@@ -10,11 +10,10 @@ port = 8080
 
 [analytics]
 # Enable MOG2 motion detection (default: false)
+# Motion threshold is automatically tuned using percentile-based adaptive thresholding
 enabled = true
 # Frame sample rate for analysis (default: 5)
 sample_fps = 5
-# Minimum score to record a motion segment (default: 0.05)
-motion_threshold = 0.05
 
 # Object detection using YOLO26 (requires motion detection enabled)
 [analytics.object_detection]
