--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ rust-embed = "8"
 mime_guess = "2"
 serde_json = "1"
 opencv = { version = "0.98.1", features = ["clang-runtime"] }
+ort = { version = "2.0.0-rc.11", features = ["download-binaries", "fetch-models"] }
+ndarray = "0.17.2"
