Add auto-update from GitHub Releases on startup
Check for newer releases at startup and replace the binary in-place,
then exit for systemd to restart with the new version. Update checks
are enabled by default and can be disabled via [update] enabled = false
in config.toml. All update errors are logged as warnings and never
prevent normal startup.

--- a/config.toml.example
+++ b/config.toml.example
@@ -1,5 +1,9 @@
 # Camon Configuration
 
+[update]
+# Auto-update from GitHub Releases on startup (default: true)
+enabled = true
+
 [buffer]
 # Hot buffer duration in seconds (default: 600 = 10 minutes)
 hot_duration_secs = 600
