--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ serde_json = "1"
 opencv = { version = "0.98.1", features = ["clang-runtime"] }
 ort = { version = "2.0.0-rc.11", features = ["download-binaries", "fetch-models"] }
 ndarray = "0.17.2"
+reqwest = { version = "0.13.1", features = ["rustls-native-certs", "json"] }
