--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,36 +5,21 @@ on:
     tags: ['v*']
 
 jobs:
-  build:
-    strategy:
-      matrix:
-        include:
-          - variant: glibc
-            runner: ubuntu-latest
-            container: ""
-          - variant: musl
-            runner: ubuntu-latest
-            container: alpine:latest
-
-    runs-on: ${{ matrix.runner }}
-    container: ${{ matrix.container || null }}
+  release:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-      - name: Install Alpine dependencies
-        if: matrix.variant == 'musl'
-        run: apk add --no-cache opencv-dev clang-dev cmake build-base rust cargo git
-
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Ubuntu dependencies
-        if: matrix.variant == 'glibc'
+      - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y libopencv-dev clang libclang-dev cmake
 
       - name: Setup Rust toolchain
-        if: matrix.variant == 'glibc'
         run: rustup default stable
 
       - name: Cache cargo registry and build
@@ -44,50 +29,21 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ matrix.variant }}-cargo-${{ hashFiles('Cargo.lock') }}
+          key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
           restore-keys: |
-            ${{ matrix.variant }}-cargo-
+            ${{ runner.os }}-cargo-
 
       - name: Build camon binary
         run: cargo build --release
 
-      - name: Upload binary artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: camon-linux-${{ matrix.variant }}
-          path: target/release/camon
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-      - name: Download glibc artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: camon-linux-glibc
-          path: artifacts/glibc
-
-      - name: Download musl artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: camon-linux-musl
-          path: artifacts/musl
-
-      - name: Rename binaries
-        run: |
-          mv artifacts/glibc/camon camon-linux-glibc
-          mv artifacts/musl/camon camon-linux-musl
+      - name: Rename binary
+        run: cp target/release/camon camon-linux-glibc
 
       - name: Create release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release create ${{ github.ref_name }} \
-            --repo ${{ github.repository }} \
             --title "${{ github.ref_name }}" \
             --generate-notes \
-            camon-linux-glibc \
-            camon-linux-musl
+            camon-linux-glibc
